plugins {
    id 'java'
    id 'io.freefair.lombok' version '8.4'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.3'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.projectlombok:lombok:1.18.28'
    compileOnly 'org.projectlombok:lombok:1.18.28'
    implementation 'org.postgresql:postgresql:42.6.0'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'
    implementation 'org.flywaydb:flyway-core:9.22.1'
    implementation 'org.springframework.security:spring-security-crypto:6.1.5'
}
jar {
    enabled = true
}